welcome.lessons.welcome.bat.bool2.InOrderEqual.scala.error
inOrderEqual:3: error: value a is not a member of Boolean
  return (a<b && b<c )|| (equalOk a<=b && b<=c)
                                  ^inOrderEqual:3: error: not found: value <=
  return (a<b && b<c )|| (equalOk a<=b && b<=c)
                                   ^inOrderEqual:3: error: not found: value &&
  return (a<b && b<c )|| (equalOk a<=b && b<=c)
                                       ^inOrderEqual:3: error: not found: value <=
  return (a<b && b<c )|| (equalOk a<=b && b<=c)
                                           ^